test/corpus/examples/ai/features/sfm.txt
===
Sfm
===

//---------------------------------------------------------------------
// name: sfm.ck
// desc: Spectral Flatness Measure
//
// uncomment for SFM API:
// SFM.help();
//
// author: Yikai Li
//         Ge Wang
// date: Winter 2023
//---------------------------------------------------------------------

// synthesis / analysis network
SinOsc s => FFT fft =^ SFM sfm => blackhole;

// set FFT size
2048 => fft.size;
// set window type and size
Windowing.hann(fft.size()) => fft.window;
// our hop size (how often to perform analysis)
fft.size()::samp => dur HOP;

// let one FFT-size of time pass (to buffer)
fft.size()::samp => now;
// control loop
while( true )
{
    //----------------------------------------------------------------
    // upchuck() computes SFM, automatically computing upstream
    // dependencies connected to it using =^ (e.g., FFT)
    //----------------------------------------------------------------
    sfm.upchuck();
    // print
    cherr <= "SFM: ";
    // print the SFM results
    for( int i; i < sfm.fvals().size(); i++ )
    {
        Math.round(sfm.fval(i) * 10) / 10 => float tmp;
        cherr <= tmp <= (tmp == 1 || tmp == 0?".0":"") <= " ";
    }
    // endline
    cherr <= IO.newline();
    // advance time
    HOP => now;
    // randomize frequency
    Math.random2f(20, 1000) => s.freq;
}

---

(source_file
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (statement
    (chuck_operation
      (chuck_operation
        (chuck_operation
          (variable_declaration
            (class_identifier)
            (variable_identifier))
          (chuck_operator)
          (variable_declaration
            (class_identifier)
            (variable_identifier)))
        (chuck_operator)
        (variable_declaration
          (class_identifier)
          (variable_identifier)))
      (chuck_operator)
      (keyword
        (global_unit_generator))))
  (line_comment)
  (statement
    (chuck_operation
      (int)
      (chuck_operator)
      (member_identifier
        (variable_identifier)
        (variable_identifier))))
  (line_comment)
  (statement
    (chuck_operation
      (function_call
        (member_identifier
          (class_identifier)
          (variable_identifier))
        (function_call
          (member_identifier
            (variable_identifier)
            (variable_identifier))))
      (chuck_operator)
      (member_identifier
        (variable_identifier)
        (variable_identifier))))
  (line_comment)
  (statement
    (chuck_operation
      (dur
        (function_call
          (member_identifier
            (variable_identifier)
            (variable_identifier)))
        (duration_identifier))
      (chuck_operator)
      (variable_declaration
        (primitive_type)
        (class_identifier))))
  (line_comment)
  (statement
    (chuck_operation
      (dur
        (function_call
          (member_identifier
            (variable_identifier)
            (variable_identifier)))
        (duration_identifier))
      (chuck_operator)
      (keyword
        (special_literal_value))))
  (line_comment)
  (loop
    (keyword
      (boolean_literal_value))
    (block
      (line_comment)
      (line_comment)
      (line_comment)
      (line_comment)
      (statement
        (function_call
          (member_identifier
            (variable_identifier)
            (variable_identifier))))
      (line_comment)
      (statement
        (binary_expression
          (keyword
            (stream_output_keywords))
          (operator)
          (string)))
      (line_comment)
      (for_loop
        (variable_declaration
          (primitive_type)
          (variable_identifier))
        (binary_expression
          (variable_identifier)
          (operator)
          (function_call
            (member_identifier
              (variable_identifier)
              (variable_identifier)))
          (function_call
            (variable_identifier)))
        (post_increment_expression
          (variable_identifier))
        (block
          (statement
            (chuck_operation
              (binary_expression
                (function_call
                  (member_identifier
                    (class_identifier)
                    (variable_identifier))
                  (binary_expression
                    (function_call
                      (member_identifier
                        (variable_identifier)
                        (variable_identifier))
                      (variable_identifier))
                    (operator)
                    (int)))
                (operator)
                (int))
              (chuck_operator)
              (variable_declaration
                (primitive_type)
                (variable_identifier))))
          (statement
            (binary_expression
              (binary_expression
                (binary_expression
                  (keyword
                    (stream_output_keywords))
                  (operator)
                  (variable_identifier))
                (operator)
                (expression_group
                  (ternary_expression
                    (binary_expression
                      (binary_expression
                        (binary_expression
                          (variable_identifier)
                          (operator)
                          (int))
                        (operator)
                        (variable_identifier))
                      (operator)
                      (int))
                    (string)
                    (string))))
              (operator)
              (string)))))
      (line_comment)
      (statement
        (binary_expression
          (keyword
            (stream_output_keywords))
          (operator)
          (function_call
            (member_identifier
              (class_identifier)
              (variable_identifier)))))
      (line_comment)
      (statement
        (chuck_operation
          (class_identifier)
          (chuck_operator)
          (keyword
            (special_literal_value))))
      (line_comment)
      (statement
        (chuck_operation
          (function_call
            (member_identifier
              (class_identifier)
              (variable_identifier))
            (int)
            (int))
          (chuck_operator)
          (member_identifier
            (variable_identifier)
            (variable_identifier)))))))
